Añadir controladores y vistas para gestión de propiedades
Se han añadido nuevas carpetas para las vistas de "Property" y "Owner" en el archivo `GestionDePropiedades.csproj`.
La página de error se ha actualizado para incluir un modelo de vista y mostrar un mensaje más claro.

El diseño de la página se ha mejorado con un menú de navegación más completo.
Se han creado nuevos controladores para manejar operaciones CRUD y se ha establecido la migración inicial para las tablas de la base de datos.
Además, se han añadido nuevas vistas para crear, editar y eliminar tipos de propiedad.

--- a/GestionDePropiedades.csproj
+++ b/GestionDePropiedades.csproj
@@ -18,4 +18,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Property\" />
+    <Folder Include="Views\Owner\" />
+  </ItemGroup>
+
 </Project>
